--- a/Domain 2/MusicStore2/main.css
+++ b/Domain 2/MusicStore2/main.css
@@ -1,1 +1,25 @@
+body {
+    font-family: "Segoe UI", Tahoma, sans-serif;
+}
 
+p {
+    color: navy;
+}
+
+.sale {
+    font-weight: bold;
+    background-color: aqua;
+}
+
+#sidenote {
+    background-color: #dbd9d9;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+    font-weight: bold;
+}
